--- a/notebooks/gesture_reg.ipynb
+++ b/notebooks/gesture_reg.ipynb
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,8 +174,8 @@
     "        fingers.append({\n",
     "            'fingers_up': top_gesture[i][0].category_name,\n",
     "            'confidence': top_gesture[i][0].score,\n",
-    "            'x': hands[0].x * image[0].width,\n",
-    "            'y': image[0].height - (hands.y * image.height)\n",
+    "            'x': hands[0].x * image.width,\n",
+    "            'y': image.height - (hands[0].y * image.height)\n",
     "        })\n",
     "    \n",
     "    return fingers\n"
@@ -183,27 +183,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "W20240203 23:26:37.025789 3812499136 gesture_recognizer_graph.cc:128] Hand Gesture Recognizer contains CPU only ops. Sets HandGestureRecognizerGraph acceleration to Xnnpack.\n"
+      "W20240203 23:32:22.191375 3812499136 gesture_recognizer_graph.cc:128] Hand Gesture Recognizer contains CPU only ops. Sets HandGestureRecognizerGraph acceleration to Xnnpack.\n"
      ]
     },
     {
-     "ename": "TypeError",
-     "evalue": "__getitem__(): incompatible function arguments. The following argument types are supported:\n    1. (self: mediapipe.python._framework_bindings.image.Image, arg0: List[int]) -> object\n\nInvoked with: <mediapipe.python._framework_bindings.image.Image object at 0x28f2e87c0>, 0",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[84], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mget_fingers\u001b[49m\u001b[43m(\u001b[49m\u001b[43mimage_file_name\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mmodel_file\u001b[49m\u001b[43m)\u001b[49m\n",
-      "Cell \u001b[0;32mIn[83], line 21\u001b[0m, in \u001b[0;36mget_fingers\u001b[0;34m(image_source, model_source)\u001b[0m\n\u001b[1;32m     14\u001b[0m fingers \u001b[38;5;241m=\u001b[39m []\n\u001b[1;32m     16\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m i, hands \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28menumerate\u001b[39m(hand_landmarks):\n\u001b[1;32m     18\u001b[0m     fingers\u001b[38;5;241m.\u001b[39mappend({\n\u001b[1;32m     19\u001b[0m         \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mfingers_up\u001b[39m\u001b[38;5;124m'\u001b[39m: top_gesture[i][\u001b[38;5;241m0\u001b[39m]\u001b[38;5;241m.\u001b[39mcategory_name,\n\u001b[1;32m     20\u001b[0m         \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mconfidence\u001b[39m\u001b[38;5;124m'\u001b[39m: top_gesture[i][\u001b[38;5;241m0\u001b[39m]\u001b[38;5;241m.\u001b[39mscore,\n\u001b[0;32m---> 21\u001b[0m         \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mx\u001b[39m\u001b[38;5;124m'\u001b[39m: hands[\u001b[38;5;241m0\u001b[39m]\u001b[38;5;241m.\u001b[39mx \u001b[38;5;241m*\u001b[39m \u001b[43mimage\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m]\u001b[49m\u001b[38;5;241m.\u001b[39mwidth,\n\u001b[1;32m     22\u001b[0m         \u001b[38;5;124m'\u001b[39m\u001b[38;5;124my\u001b[39m\u001b[38;5;124m'\u001b[39m: image[\u001b[38;5;241m0\u001b[39m]\u001b[38;5;241m.\u001b[39mheight \u001b[38;5;241m-\u001b[39m (hands\u001b[38;5;241m.\u001b[39my \u001b[38;5;241m*\u001b[39m image\u001b[38;5;241m.\u001b[39mheight)\n\u001b[1;32m     23\u001b[0m     })\n\u001b[1;32m     25\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m fingers\n",
-      "\u001b[0;31mTypeError\u001b[0m: __getitem__(): incompatible function arguments. The following argument types are supported:\n    1. (self: mediapipe.python._framework_bindings.image.Image, arg0: List[int]) -> object\n\nInvoked with: <mediapipe.python._framework_bindings.image.Image object at 0x28f2e87c0>, 0"
-     ]
+     "data": {
+      "text/plain": [
+       "[{'fingers_up': '1',\n",
+       "  'confidence': 0.6825464367866516,\n",
+       "  'x': 155.0397491455078,\n",
+       "  'y': 238.3777141571045},\n",
+       " {'fingers_up': '4',\n",
+       "  'confidence': 0.8617125749588013,\n",
+       "  'x': 549.4397354125977,\n",
+       "  'y': 47.233943939208984},\n",
+       " {'fingers_up': '2',\n",
+       "  'confidence': 0.9709236025810242,\n",
+       "  'x': 373.64307403564453,\n",
+       "  'y': 272.5093460083008},\n",
+       " {'fingers_up': '4',\n",
+       "  'confidence': 0.5552472472190857,\n",
+       "  'x': 438.8134002685547,\n",
+       "  'y': 127.2502326965332}]"
+      ]
+     },
+     "execution_count": 90,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
